--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site settings
 title: Yummy Theme
+name: DONGChuan
 email: dongchuan55@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
