--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,12 @@
 title: Yummy Theme
 name: DONGChuan
 email: dongchuan55@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+location: Nice, France
+company: MyCompany
+company_url: https://github.com/DONGChuan
+github_url: https://github.com/DONGChuan
+
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 markdown: kramdown
