--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "octicons": "^3.5.0",
     "hover": "^2.0.2",
     "geopattern": "^1.2.3",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "primer-markdown": "^2.5.1"
   }
 }
