--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,24 @@ url: "http://localhost:4000" # the base hostname & protocol for your site
 gems:
   - jekyll-paginate
   - jekyll-geo-pattern
+  - rouge
+  - kramdown
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
+lsi:         false
+excerpt_separator: "\n\n"
+
+source:      .
+destination: ./_site
+
+quiet:    false
+defaults: []
+
+kramdown:
+  input: GFM
+  enable_coderay: true
 
 # Pagination
 paginate: 10
