Update open source page. NO API CALL!

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ gems:
   - jekyll-geo-pattern
   - rouge
   - kramdown
-
+  - jekyll-github-metadata
 # Build settings
 markdown: kramdown
 highlighter: rouge
