Add sidebar for popular repo

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,9 @@ navs:
     href: /about
     label: About
 
+# Sidebar to show popular repo
+side_bar_repo_limit: 5 # Number of repos to show
+
 # Google Analytics
 analytics :
   provider : google
