--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ company: MyCompany
 company_url: https://github.com/DONGChuan
 github_url: https://github.com/DONGChuan
 
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: http://localhost:4000 # the base hostname & protocol for your site
 
 ## Gem
 gems:
@@ -23,6 +23,7 @@ gems:
   - rouge
   - kramdown
   - jekyll-github-metadata
+
 # Build settings
 markdown: kramdown
 highlighter: rouge
