--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ location: My location # ex. Nice, France
 company: MyCompany
 company_url: my_company_website
 github_url: my_github_url # ex. https://github.com/DONGChuan
+description: description_of_your_web_site
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
