--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Fanatical Geek # ex. I m Chuan
-name: J Hay # ex. DONGChuan
+name: FanaticalGeek # ex. DONGChuan
 email: jus@fanaticalgeek.com
 location: United Kingdom # ex. Nice, France
 company: FanaticalWeb
