--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "^3.1.0"
     "bootstrap": "^3.3.6",
     "octicons": "^3.5.0",
     "hover": "^2.0.2",
