add setting for github username

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ location: My location # ex. Nice, France
 company: MyCompany
 company_url: my_company_website
 github_url: my_github_url # ex. https://github.com/DONGChuan
+github_username: # ex. DONGChuan
 description: description_of_your_web_site
 favicon: favicon.png # Image must be in assets/images
 repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.github.io
