--- a/_config.yml
+++ b/_config.yml
@@ -12,16 +12,16 @@ email: my_email_address@lalala.com
 location: My location # ex. Nice, France
 company: MyCompany
 company_url: my_company_website
-github_url: my_github_url # ex. https://github.com/DONGChuan
-github_username: # ex. DONGChuan
+github_url: https://github.com/MGXT # ex. https://github.com/DONGChuan
+github_username: MGXT
 description: description_of_your_web_site
 favicon: favicon.png # Image must be in assets/images
-repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.github.io
+repository: blog/mgxt.github.io # ex. DONGChuan/DONGChuan.github.io
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
-url: http://localhost:4000
+url: http://mgxt.github.io
 
 ## Gem
 gems:
