--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository: blog/mgxt.github.io # ex. DONGChuan/DONGChuan.github.io
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
-url: http://mgxt.github.io
+url: http://mgxt.github.io/blog
 
 ## Gem
 gems:
